--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/cli": "^10.4.4",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.16.1",
